--- a/src/MessageBoard.Api/MessageBoard.Api.csproj
+++ b/src/MessageBoard.Api/MessageBoard.Api.csproj
@@ -4,6 +4,16 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
+    <NoWarn>1701;1702;1705;1591;</NoWarn>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NSwag.AspNetCore" Version="13.7.3" />
+  </ItemGroup>
+
+
   <ItemGroup>
     <ProjectReference Include="..\MessageBoard\MessageBoard.csproj" />
   </ItemGroup>
