Add Readme, Dockerfile and setup script

--- a/src/MessageBoard.Api/appsettings.json
+++ b/src/MessageBoard.Api/appsettings.json
@@ -6,6 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
+  "Urls": "http://*:5001",
   "DBName": "MessageBoard.dev"
 }
